--- a/Romanian/main/Notes.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Notes.apk/res/values-ro/strings.xml
@@ -17,6 +17,7 @@
     <string name="app_widget">Note</string>
     <string name="call_folder_name">Note apel</string>
     <string name="cloud_trash_bin_title">Ștergeți notițele din Mi Cloud</string>
+    <string name="default_folder_name">Dosar fără nume</string>
     <string name="delete_folder_dialog_tile">Ștergeți dosarul</string>
     <string name="dlg_btn_set_password">Setați parola</string>
     <string name="dlg_check_reminder">"Nu arăta din nou"</string>
@@ -118,6 +119,7 @@
     <string name="sns_choose_quality_high">Ridicată (%1$s)</string>
     <string name="sns_choose_quality_low">Joasă</string>
     <string name="sns_choose_quality_title">Selectaţi calitatea imaginii</string>
+    <string name="sns_content_default">Distribuire fotografie</string>
     <string name="sns_desc_image_preview">Previzualizare mesaj</string>
     <string name="sns_desc_preview_weibo">Previzualizare mesaj Weibo</string>
     <string name="sns_footer_text">Creat cu Note Mi</string>
@@ -134,6 +136,7 @@
     <string name="theme_title_blue">Albastru</string>
     <string name="theme_title_candy">Acadea</string>
     <string name="theme_title_dark">Întunecat</string>
+    <string name="theme_title_default">Implicit</string>
     <string name="theme_title_green">Verde</string>
     <string name="theme_title_invitation">Invitație</string>
     <string name="theme_title_red">Roșu</string>
