--- a/Romanian/main/PrintSpooler.apk/res/values-ro/strings.xml
+++ b/Romanian/main/PrintSpooler.apk/res/values-ro/strings.xml
@@ -37,6 +37,7 @@
     <string name="print_add_printer">Adăugați o imprimantă</string>
     <string name="print_button">Printați</string>
     <string name="print_dialog">Caseta de dialog de printare</string>
+    <string name="print_error_default_message">"Ne pare rău, nu a mers. Încercați din nou."</string>
     <string name="print_error_printer_unavailable">"Această imprimantă nu este disponibilă acum."</string>
     <string name="print_error_retry">Reîncercați</string>
     <string name="print_forget_printer">Omiteți imprimanta</string>
