--- a/Romanian/main/Weather.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Weather.apk/res/values-ro/strings.xml
@@ -144,6 +144,7 @@ Apăsați pe ecran pentru a adăuga manual sau pentru a repoziționa orașul"</s
     <string name="realtime_aqi_title">Indice de Calitate a Aerului</string>
     <string name="realtime_humidity_title">Umiditatea relativă</string>
     <string name="realtime_temperature_no_data">N/A</string>
+    <string name="realtime_wind_default_title">Vânt</string>
     <string name="refresh_fail">"Nu s-a putut conecta la rețea"</string>
     <string name="retry">Încercați din nou</string>
     <string name="search_weather">Meteo</string>
